--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
+
+    <color name="login_btn_login">#353535</color>
+    <color name="login_layout_background_solid">#E6E5E5</color>
+    <color name="login_layout_background_storke">#A3A3A3</color>
 </resources>
