--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,5 +110,14 @@
             app:layout_constraintTop_toBottomOf="@+id/login_pw_layout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/login_btn_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="메인으로"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
