--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,5 +3,7 @@
     <dimen name="loginactivity_layout_blank1">10dp</dimen>
     <dimen name="loginactivity_layout_blank2">20dp</dimen>
 
-
+    <dimen name="memoactivity_padding_btn_addmemo">10dp</dimen>
+    <dimen name="memoactivity_padding_item">15dp</dimen>
+    <dimen name="memoactivity_btn_size">40dp</dimen>
 </resources>
